--- a/argocd-example-apps/helm-guestbook/templates/ingress.yaml
+++ b/argocd-example-apps/helm-guestbook/templates/ingress.yaml
@@ -9,5 +9,5 @@ spec:
   services:
     - backend:
         serviceName: {{ template "helm-guestbook.fullname" . }}
-        servicePort: {{ .Values.service.port.http }}
+        servicePort: {{ .Values.service.port }}
       path: /
