--- a/mailhog/templates/ingressgate.yaml
+++ b/mailhog/templates/ingressgate.yaml
@@ -9,5 +9,5 @@ spec:
   services:
     - backend:
         serviceName: {{ template "mailhog.fullname" . }}
-        servicePort: {{ .Values.service.port }}
+        servicePort: {{ .Values.service.port.http }}
       path: /
