--- a/mychart/templates/configmap.yaml
+++ b/mychart/templates/configmap.yaml
@@ -4,4 +4,5 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myvalue: "Hello World 000"
-  value2: {{ .Chart.Description }} #  the description in Chart.yaml
+  description: {{ .Chart.Description | quote }} #  the description in Chart.yaml
+  description_no_quotes: {{ .Chart.Description }} #  the description in Chart.yaml
